--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block head %}
-  
+  <link rel="stylesheet" href="/css/index.css">
 {% endblock %}
 
 {% block content %}
-
+		<div class="top-banner">
+		</div>
+		<div class="products">
+			<div class="title">
+				<span>best sellers</span>
+			</div>
+			<div class="productsbar"></div>
+		</div>
 {% endblock %}
 
 {% block foot %}
