--- a/views/layout.html
+++ b/views/layout.html
@@ -30,10 +30,10 @@
 				</ul>
 				<ul class="productsnav">
 					<li><a href="">home</a></li>
-					<li><a href="">pjs for girls</a></li>
-					<li><a href="">pjs for boys</a></li>
-					<li><a href="">fuzzy fleece</a></li>
-					<li><a href="">sale</a></li>
+					<li><a href="/pjs-for-girls">pjs for girls</a></li>
+					<li><a href="/pjs-for-boys">pjs for boys</a></li>
+					<li><a href="/fuzzy-fleece">fuzzy fleece</a></li>
+					<li><a href="/sale">sale</a></li>
 				</ul>
 				<ul class="items">
 					<li><a href="">0 items</a></li>
@@ -44,16 +44,10 @@
 		</div>
 		<div class="middle full-width">
 			<div class="site-width">
-				<div class="top-banner">
-	        		{% block content %}
-
-					{% endblock %}
-				</div>
-				<div class="products">
-					<div class="title">
-						<span>best sellers</span>
-					</div>
-					<div class="productsbar"></div>
+				<div class="content">
+				{% block content %}
+				
+				{% endblock %}
 				</div>
 				<div class="newsletterContainer">	
 					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
