--- a/views/404.html
+++ b/views/404.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-	<h1>{{title}}</h1>
-	<div>{{html|safe}}</div>
+	<h1>page not found</h1>
+	<p>We could not find the page you were looking for.</p>
 {% endblock %}
 
 {% block foot %}
