--- a/views/partials/product.html
+++ b/views/partials/product.html
@@ -1,1 +1,4 @@
-<div class="product">{{productName}}</div>
+<div class="product">
+	<div class="name">{{productName}}</div>
+	<img src="{{images[6]}}">
+</div>
