--- a/views/partials/product.html
+++ b/views/partials/product.html
@@ -1,12 +1,12 @@
 <a class="product" href="{{ productURL }}">
-	<img src="{{ images[0] }}">
-	<span class="productName">{{ productName }}</div>
+	<img src="{{ images[6] }}">
+	<span class="productName">{{ productName }}</span>
 	<span class="price">
 		{% if discount %}
 			<span class="discount">
 		{% endif %}
-				<span class="unit-price">{{ sizes[0].unitPrice }}</span>
-				<span class="msrp">{{ sizes[0].msrp }}</span>
+				<span class="unit-price">${{ sizes[0].unitPrice }}</span>
+				<span class="msrp">${{ sizes[0].msrp }}</span>
 		{% if discount %}
 			</span>
 		{% endif %}
