--- a/views/partials/product.html
+++ b/views/partials/product.html
@@ -1,14 +1,21 @@
-<a class="product" href="{{ productURL }}">
-	<img src="{{ images[6] }}">
-	<span class="productName">{{ productName }}</span>
-	<span class="price">
-		{% if discount %}
-			<span class="discount">
-		{% endif %}
-				<span class="unit-price">${{ sizes[0].unitPrice }}</span>
-				<span class="msrp">${{ sizes[0].msrp }}</span>
-		{% if discount %}
+<div class="product-container">
+	<div class="product">
+		<a href="{{ productURL }}">
+			<img src="{{ images[6] }}">
+			<span class="productName">{{ productName }}</span>
+			<span class="price">
+				{% if discount %}
+					<span class="discount">
+				{% endif %}
+						<span class="unit-price">${{ sizes[0].unitPrice }}</span>
+						<span class="msrp">${{ sizes[0].msrp }}</span>
+				{% if discount %}
+					</span>
+				{% endif %}
 			</span>
-		{% endif %}
-	</span>
-</a>
+		</a>
+	</div>
+	<span class="add-to-cart">add to cart</span>
+</div>
+
+
