--- a/views/partials/product.html
+++ b/views/partials/product.html
@@ -1,6 +1,7 @@
 <div class="product-container">
 	<div class="product">
 		<a href="{{ productURL }}">
+			<span class="quick-view">QUICKVIEW</span>
 			<img src="{{ images[6] }}">
 			<span class="productName">{{ productName }}</span>
 			<span class="price">
@@ -15,7 +16,11 @@
 			</span>
 		</a>
 	</div>
-	<span class="add-to-cart">add to cart</span>
+	<div></div>
+	<button class="add-to-cart">
+		<span class="text-container"><i class="icon-shopping-cart"></i><span class="text">add to cart</span></span>
+	</button>
 </div>
+
 
 
