--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 					{% include "./partials/product.html" with product only %}
 				{% endfor %}
 			</div>
-			<a href="" class="productsbar"><span>SHOW MORE</span></a>
+			<a href="" class="productsbar"><i class="icon-th"></i><span>SHOW MORE</span></a>
 		</div>
 {% endblock %}
 
