--- a/views/layout.html
+++ b/views/layout.html
@@ -51,8 +51,8 @@
 				</div>
 				<div class="newsletterContainer">	
 					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
-					<div class="awlogo"></div>
-					<div class="pinklogo"></div>
+					<a href="" class="awlogo"></a>
+					<a href="" class="pinklogo"></a>
 					<form action="subscribe.html" class="subscribebar">
 						<input type="text" name="subscribeemail" placeholder="add your email" class="subscribeemail"/> 
 						<button class="subscribetext"><span>subscribe</span></button>
