catalog page update

--- a/views/layout.html
+++ b/views/layout.html
@@ -45,9 +45,11 @@
 		<div class="middle full-width">
 			<div class="site-width">
 				<div class="content">
-				{% block content %}
+					<div class="inner-content">
+						{% block content %}
 				
-				{% endblock %}
+						{% endblock %}
+					</div>
 				</div>
 				<div class="newsletterContainer">	
 					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
