--- a/views/catalog.html
+++ b/views/catalog.html
@@ -5,12 +5,30 @@
 {% endblock %}
 
 {% block content %}
-	<h1>catalog</h1>
-	<div class="catalog-banner">{{banner|safe}}</div>
-	<div class="products">
-		{% for productColor in productColors %}
-			{% include "./partials/productColor.html" with productColor only %}
-		{% endfor %}
+	<div class="breadcrumb"><span>Home > Girls</span></div>
+	<div class="left-column">
+		<a href="" class="departments"><span>DEPARTMENTS</span></a>
+		<ul class="nav-list">
+			<li><a href="">GIRLS</a></li>
+			<li><a href="">BOYS</a></li>
+			<li><a href="">FUZZY</a></li>
+			<li><a href="">SALE</a></li>
+		</ul>
+	</div>
+	<div class="right-column">
+		<div class="catalog-header">HEADER</div>
+		<div class="right-container">
+			<span class="right-container-title">SLUMBER AND SMILE</span>
+			<span class="right-container-border"></span>
+			<span class="right-container-description">Lorem ipsum dolor sit amet, consectetuer <br>sed diam noncidunt ut laoreet doloe<br>iam noncidunt ut laoreet doloe</span>
+		</div>
+		<div class="right-banner"></div>
+		<div class="sort-product-bar"></div>
+		<div class="featured-products">
+			{% for product in products %} 
+				{% include "./partials/product.html" with product only %}
+			{% endfor %}
+		</div>
 	</div>
 {% endblock %}
 
