--- a/views/layout.html
+++ b/views/layout.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 		<script type="text/javascript" src="//use.typekit.net/ody1owy.js"></script>
@@ -44,7 +45,7 @@
 		</div>
 		<div class="middle full-width">
 			<div class="site-width">
-				<div class="content">
+				<div class="content clearfix">
 					<div class="inner-content">
 						{% block content %}
 				
