--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -10,6 +10,7 @@
 	background-color:#fff;
 	border-bottom:1px solid #bcc0c0;
 	margin-bottom:15px;
+	border-radius:0;
 }
 .breadcrumb span {
 	font-size:15px;
