--- a/views/partials/product.html
+++ b/views/partials/product.html
@@ -1,5 +1,5 @@
 <div class="product-container">
-	<div class="product">
+	<div class="product" data-productnumber="{{ productNumber }}">
 		<a href="{{ productURL }}">
 			<span class="quick-view">QUICKVIEW</span>
 			<img src="{{ images[6] }}">
