added inline json to speed up modal request

--- a/views/index.html
+++ b/views/index.html
@@ -40,5 +40,14 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
+	<script>
+		$('.quick-view-modal').modal({ show : false });
+		$('.featured-products').on('click','.product', function(ev) {
+			ev.preventDefault();
+			var productNumber = $(this).data('productnumber');
+			console.log(productNumber);
+			$('.quick-view-modal').modal('show');
+		});
+	</script>
 	
 {% endblock %}
