seperated javascript from index.html view

--- a/views/index.html
+++ b/views/index.html
@@ -39,15 +39,5 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
-
-	<script>
-		$('.quick-view-modal').modal({ show : false });
-		$('.featured-products').on('click','.product', function(ev) {
-			ev.preventDefault();
-			var productNumber = $(this).data('productnumber');
-			console.log(productNumber);
-			$('.quick-view-modal').modal('show');
-		});
-	</script>
-	
+	<script src="/js/pages/index.js"></script>	
 {% endblock %}
