--- a/views/index.html
+++ b/views/index.html
@@ -20,24 +20,6 @@
 {% endblock %}
 
 {% block foot %}
-
- <!-- Modal -->
-  <div class="modal fade quick-view-modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          <p>Sample Text</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+	{% include "./partials/quickview.html" %}
 	<script src="/js/pages/index.js"></script>	
 {% endblock %}
