--- a/views/layout.html
+++ b/views/layout.html
@@ -25,7 +25,7 @@
 				<a href="#" class="facebook"></a>
 				<a href="#" class="pintrest"></a>
 				<ul class="topnav">
-					<li><a href="">home</a></li>
+					<li><a href="/">home</a></li>
 					<li><a href="">my account</a></li>
 					<li><a href="">sign in</a></li>
 				</ul>
