--- a/views/layout.html
+++ b/views/layout.html
@@ -112,6 +112,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 		<script src="/js/plugins/swig.pack.min.js"></script>
+		<script src="//api.hubsoft.ws/js/api.js"></script>
 		<script src="/js/app.js"></script>
         {% block foot %}
 
