--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -1,74 +1,64 @@
-<div class="modal fade quick-view-modal" tabindex="-1" role="dialog"></div>
-<script type="text/html" id="quick-view-template">
-   <div class="modal-dialog">
-     <div class="modal-content clearfix">
-       <div class="modal-header">
-         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-         <h4 class="modal-title"></h4>
-       </div>
-       <div class="modal-body">
-         <!-- start of content -->
-
+<div class="modal-dialog">
+  <div class="modal-content clearfix">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h4 class="modal-title">{{ productName }}</h4>
+    </div>
+    <div class="modal-body">
+      <!-- start of content -->
 		<div class="left-column">
-			<div class="big-product-image"></div>
-			<div class="product-colors">
-				{% for color in product.colors %}
-					<a href="{{ color.productURL }}">
-						<span class="swatch-text">{{ color.colorName }}</span>
-						<span class="swatch-color-first">{{ color.colorValue }}</span>
-					</a>
-				{% endfor %}
-			</div>
+		<div class="big-product-image"></div>
+		<div class="product-colors">
+			{% for color in product.colors %}
+				<a href="{{ color.productURL }}">
+					<span class="swatch-text">{{ color.colorName }}</span>
+					<span class="swatch-color-first">{{ color.colorValue }}</span>
+				</a>
+			{% endfor %}
+		</div>
 		</div>
 		<div class="right-column">
-			<div class="product-name">
-				<span>{{ product.productName }}</span>
-			</div>
-			<div class="line-break"></div>
-			<div class="product-price">
-				<span>${{ product.price }}</span>
-			</div>
-			<div class="select-pattern">
-				<select class="pattern-dropdown">
-				  	<option value="">Select Pattern</option>
-				  	<option value="">Monkeys Bannas</option>
-				  	<option value="">Snowflakes Blue</option>
-					<option value="">Snowman</option>
-				</select>
-			</div>
-			<div class="select-size">
-				<select class="size-dropdown">
-				  	<option value="">Select Size</option>
-				  	<option value="">1</option>
-				  	<option value="">2</option>
-					<option value="">3</option>
-					<option value="">4</option>
-				</select>
-			</div>
-			<div class="product-next">
-				<a href=""><span class="minus-product">-</span></a>
-				<a href=""><span class="equal-product">2</span></a>
-				<a href=""><span class="add-product">+</span></a>
-			</div>
-			<div class="product-add-to-cart">
-				<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
-			</div>
-			<div class="product-code">
-				<span>Product Code: product 11</span>
-			</div>
-			<div class="product-availability"><span>Availability: In Stock</span></div>
-			<div class="second-line-break"></div>
-			<div class="product-description"><span>rat volutpat. Ut wisi enim ad minim veniam, 
-				quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea 
-				commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate 
-				velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros 
-				et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue </span>
-			</div>
+		<div class="product-name">
+			<span>{{ productName }}</span>
+		</div>
+		<div class="line-break"></div>
+		<div class="product-price">
+			<span>${{ price }}</span>
+		</div>
+		<div class="select-pattern">
+			<select class="pattern-dropdown">
+			  	<option value="">Select Pattern</option>
+			  	<option value="">Monkeys Bannas</option>
+			  	<option value="">Snowflakes Blue</option>
+				<option value="">Snowman</option>
+			</select>
+		</div>
+		<div class="select-size">
+			<select class="size-dropdown">
+			  	<option value="">Select Size</option>
+			  	<option value="">1</option>
+			  	<option value="">2</option>
+				<option value="">3</option>
+				<option value="">4</option>
+			</select>
+		</div>
+		<div class="product-next">
+			<a href=""><span class="minus-product">-</span></a>
+			<a href=""><span class="equal-product">2</span></a>
+			<a href=""><span class="add-product">+</span></a>
+		</div>
+		<div class="product-add-to-cart">
+			<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
+		</div>
+		<div class="product-code">
+			<span>Product Code: product 11</span>
+		</div>
+		<div class="product-availability"><span>Availability: In Stock</span></div>
+		<div class="second-line-break"></div>
+		<div class="product-description"><span>{{ description }}</span>
+		</div>
 		</div>
 		<!-- end of content -->
-       </div>
-     </div>
-   </div>
-</script>
-<script src="/js/quickview.js"></script>
- 
+    </div>
+  </div>
+</div>
