--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -9,12 +9,7 @@
 		<div class="left-column">
 		<div class="big-product-image"></div>
 		<div class="product-colors">
-			{% for color in product.colors %}
-				<a href="{{ color.productURL }}">
-					<span class="swatch-text">{{ color.colorName }}</span>
-					<span class="swatch-color-first">{{ color.colorValue }}</span>
-				</a>
-			{% endfor %}
+
 		</div>
 		</div>
 		<div class="right-column">
@@ -23,7 +18,7 @@
 		</div>
 		<div class="line-break"></div>
 		<div class="product-price">
-			<span>${{ price }}</span>
+			<span>$</span>
 		</div>
 		<div class="select-pattern">
 			<select class="pattern-dropdown">
