Added Product Code (productUID) to Quick View

--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -48,7 +48,7 @@
 			<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
 		</div>
 		<div class="product-code">
-			<span>Product Code: product 11</span>
+			<span>Product Code: {{ productUID }}</span>
 		</div>
 		<div class="product-availability"><span>Availability: In Stock</span></div>
 		<div class="second-line-break"></div>
