Descriptions added to Quick View but html tags showing

--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="product-availability"><span>Availability: In Stock</span></div>
 		<div class="second-line-break"></div>
-		<div class="product-description"><span>{{ description }}</span>
+		<div class="product-description"><span>{{ descriptions[0] }}</span>
 		</div>
 		</div>
 		<!-- end of content -->
