--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -21,7 +21,7 @@
 			{% if isSale %}
 				<span class="slash">${{ msrp }}</span>
 			{% endif %}
-				<span>${{ unitPrice }}</span>
+			<span>${{ unitPrice }}</span>
 		</div>
 		<div class="select-pattern">
 			<select class="pattern-dropdown">
@@ -52,8 +52,7 @@
 		</div>
 		<div class="product-availability"><span>Availability: In Stock</span></div>
 		<div class="second-line-break"></div>
-		<div class="product-description"><span>{{ descriptions[0] }}</span>
-		</div>
+		<div class="product-description">{{ descriptions[0] }}</div>
 		</div>
 		<!-- end of content -->
     </div>
