Added Increment/Decrement to QuickView product quantity

--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -40,9 +40,9 @@
 			</select>
 		</div>
 		<div class="product-next">
-			<a href=""><span class="minus-product">-</span></a>
-			<a href=""><span class="equal-product">2</span></a>
-			<a href=""><span class="add-product">+</span></a>
+			<a id="product-decrement" href=""><span class="minus-product">-</span></a>
+			<a id="product-equal" href=""><span class="equal-product">0</span></a>
+			<a id="product-increment" href=""><span class="add-product">+</span></a>
 		</div>
 		<div class="product-add-to-cart">
 			<a href=""><span class="click-add-to-cart">ADD TO CART</span></a>
