--- a/views/test.html
+++ b/views/test.html
@@ -1,1 +1,7 @@
-<div class="kitgui kitgui-id-{{  }}">{{  }}
+<div class="{{ kitgui['newsletter-checkbox'].classNames }}">
+	{{ kitgui['newsletter-checkbox'].content | raw }}
+</div>
+<script type="text/javascript">
+	var kitgui = { key: 'd3f9de3896714860aa94d6b441376df4', tabVisible: false };
+</script>
+<script src="//d34ic8my8k87as.cloudfront.net/js/kitgui.js"></script>
