--- a/views/layout.html
+++ b/views/layout.html
@@ -117,6 +117,10 @@
         {% block foot %}
 
 		{% endblock %}
+		<script type="text/javascript">
+			var kitgui = { key: 'd3f9de3896714860aa94d6b441376df4', tabVisible: false };
+		</script>
+		<script src="//d34ic8my8k87as.cloudfront.net/js/kitgui.js"></script>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
