--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -2,12 +2,11 @@
   <div class="modal-content clearfix">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h4 class="modal-title">{{ productName }}</h4>
     </div>
     <div class="modal-body">
       <!-- start of content -->
 		<div class="left-column">
-		<div class="big-product-image"></div>
+		<div class="big-product-image" style="background-image:url('{{ images[1] }}')"></div>
 		<div class="product-colors">
 
 		</div>
