Working on Cart

--- a/views/index.html
+++ b/views/index.html
@@ -21,5 +21,7 @@
 
 {% block foot %}
 	<script src="/js/quickview.js"></script>	
+	<script src="/js/hubsoft.js"></script>	
+	<script src="/js/product.js"></script>	
 	<script src="/js/pages/index.js"></script>
 {% endblock %}
