Changed CSS on Quick-View Image: added background-size:contain;

--- a/public/css/quickview.css
+++ b/public/css/quickview.css
@@ -35,6 +35,7 @@
 	height:480px;
 	background-repeat:no-repeat;
 	background-position:center center;
+    background-size: contain;
 }
 .quick-view-modal .product-colors {
 	position:relative;
